# korean-josa-python

./: .gitignore  README.md  pyproject.toml  요구사항.md
src/josa/: __init__.py  core.py
tests/: test_josa.py
