[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-josa"
version = "0.0.1"
description = "A lightweight Python library for automatic Korean Josa (postposition) selection."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Yegang Hwang"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/yeganghwang/korean-josa-python"

[tool.setuptools.packages.find]
where = ["src"]
